# Tkinter

./: Basic.py  Basic2.py  README.md  TkinterMASTERDocument.py  address_book.db  calculator.py  fcc1.py  fcc10.py  fcc11.py  fcc12.py  fcc13.py  fcc15.py  fcc16.py  fcc17.py  fcc18.py  fcc19.py  fcc2.py  fcc20.py  fcc21.py  fcc22.py  fcc23.py  fcc24.py  fcc3.py  fcc4.py  fcc5.py  fcc6.py  fcc7.py  fcc8.py  fcc9.py  originalcalc.py  pg155.py  pg157.py  pg159.py  pg161.py  pg162.py  pg164.py  pg166.py  pg171.py  pg172.py  pg174.py  (+6 more)
.VSCodeCounter/2023-03-11_14-58-17/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
1stTkDesignTest/: pyproject.toml
