[tool.poetry]
name = "1sttkdesigntest"
version = "0.1.0"
description = ""
authors = ["Welding-Torch <46340124+Welding-Torch@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tkdesigner = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
